fixed texture + air liquefier